[package]
name = "cyg"
version = "0.1.0"
authors = ["Paul Moore <p.f.moore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
